--- a/index.html
+++ b/index.html
@@ -146,12 +146,7 @@
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="slider__item">
-								<img src="images/dest/banner.jpg" alt="">
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="slider__item">
-								<img src="images/dest/banner.jpg" alt="">
+								<img src="images/dest/banner-1.jpg" alt="">
 							</div>
 						</div>
 						<div class="swiper-slide">
