--- a/labai/index.html
+++ b/labai/index.html
@@ -157,14 +157,14 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2" style="padding: 50px 31px 25px; background-color: #FFFFFF;">
+            <td colspan="2" style="padding: 50px 31px 50px; background-color: #FFFFFF;">
                 <div style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 700; font-size: 22px; line-height: 28px; text-transform: uppercase; color: #111111; margin-bottom: 10px;">Надеемся на успешное сотрудничество</div>
                 <div style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 400; font-size: 14px; line-height: 23px; color: #111111;">При наличии вопросов прошу связаться с нашими сотрудниками:</div>
             </td>
         </tr>
         <tr style="vertical-align: top; ">
             <td style="width: 50%; padding: 0 31px 42px;">
-                <img src="images/worker-1.jpg" alt="Анна Нехина" style="margin-bottom: 26px; width: 100%; height: auto;">
+                <!-- <img src="images/worker-1.jpg" alt="Анна Нехина" style="margin-bottom: 26px; width: 100%; height: auto;"> -->
                 <div style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 700; font-size: 18px; line-height: 24px; letter-spacing: 0.02em; text-transform: uppercase; margin-bottom: 22px;">Анна Нехина</div>
                 <div>
                     <a href="tel:+79852207350" style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 400; font-size: 14px; line-height: 23px; color: #111111; text-decoration: none; margin-right: 24px; position: relative; bottom: 4px; margin-bottom: 9px;">+7 985 2207350</a>
@@ -176,7 +176,7 @@
                 <a href="mailto:nekhina@labaigroup.com" style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 400; font-size: 14px; line-height: 23px; color: #111111;">nekhina@labaigroup.com</a>
             </td>
             <td style="width: 50%; padding: 0 31px 42px;">
-                <img src="images/worker-2.jpg" alt="Дмитрий Андреев" style="margin-bottom: 26px; width: 100%; height: auto;">
+                <!-- <img src="images/worker-2.jpg" alt="Дмитрий Андреев" style="margin-bottom: 26px; width: 100%; height: auto;"> -->
                 <div style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 700; font-size: 18px; line-height: 24px; letter-spacing: 0.02em; text-transform: uppercase; margin-bottom: 22px;">Дмитрий Андреев</div>
                 <div>
                     <a href="tel:+79096528888" style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 400; font-size: 14px; line-height: 23px; color: #111111; text-decoration: none; margin-right: 23px; position: relative; bottom: 4px;">+7 909 6528888</a>
