--- a/labai/index.html
+++ b/labai/index.html
@@ -36,7 +36,7 @@
                 <img src="images/logo.png" alt="">
                 <div style=" float: right; position: relative; right: 20px;">
                     <div style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 400; font-size: 10px; line-height: 14px; text-transform: uppercase; color: #484848; padding-bottom: 12px;">Лаборатория<br> антикризисных исследований</div>
-                    <div style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 400; font-size: 10px; line-height: 12px; color: #989898;">№051 | 06 мая 2022</div>
+                    <!-- <div style="font-family: 'Gotham Pro', sans-serif; font-style: normal; font-weight: 400; font-size: 10px; line-height: 12px; color: #989898;">№051 | 06 мая 2022</div> -->
                 </div>
             </td>
             <td style="padding: 24px 31px 21px 0;">
