--- a/basistech/ui-kit.html
+++ b/basistech/ui-kit.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>basis</title>
-		<link rel="stylesheet" href="css/app.css">
+		<link rel="stylesheet" href="css/app.min.css">
 	</head>
 	<body>
 		<div class="ui-kit">
@@ -1462,6 +1462,6 @@
 				<path d="M60.9253 12.8853C60.9253 15.67 63.3243 18.3688 66.607 18.319H73.4697C74.1164 18.319 74.6423 18.8309 74.6423 19.4604C74.6423 20.0899 74.1164 20.6018 73.4697 20.6018H60.9253V24.9991C62.5736 24.99 70.672 24.9991 73.6258 24.9991C75.7563 24.9991 79 23.2997 79 19.5047C79 15.8581 76.6502 14.5503 74.9601 14.1135C74.0086 13.7463 67.9552 13.985 66.8449 13.9208C66.1982 13.9208 65.4344 13.6278 65.4344 12.7795C65.4344 12.1129 65.8823 11.6381 66.8449 11.6381C67.3671 11.6381 76.8369 11.6308 77.5988 11.6381V7.37735H66.4463C63.3968 7.37735 60.9253 9.73156 60.9253 12.8853Z" fill="white"/>
 			</symbol>
 		</svg>
-		<script src="js/app.js"></script>
+		<script src="js/app.min.js"></script>
 	</body>
 </html>
