--- a/basistech/index.html
+++ b/basistech/index.html
@@ -7,7 +7,7 @@
 		<title>basistech</title>
 		<link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
 		<link rel="stylesheet" href="libs/custom-select/custom-select.css">
-		<link rel="stylesheet" href="css/app.min.css">
+		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
 		<div style="width: 100vw; overflow-x: hidden;">
@@ -3372,6 +3372,6 @@
 		</svg>
 		<script src="libs/custom-select/custom-select.min.js"></script>
 		<script src="libs/swiper/swiper-bundle.min.js"></script>
-		<script src="js/app.min.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
