--- a/basistech/index.html
+++ b/basistech/index.html
@@ -502,7 +502,7 @@
 						<div class="copyright footer__copyright">2022 © basis.ru</div>
 						<div class="sk footer__sk">
 							<div class="sk__logo">
-								<img src="images/sk.webp" alt="">
+								<img src="images/sk.webp" alt="" width="57" height="40">
 							</div>
 							<div class="sk__content">
 								<div class="sk__text">Basis является резидентом Сколково</div>
