--- a/basistech/index.html
+++ b/basistech/index.html
@@ -19,7 +19,7 @@
 								<div class="hamburger-icon header__hamburger-icon"></div>
 								<a href="javascript:void(0);" class="logo header__logo">
 									<svg class="header__logo-icon" width="119" height="38">
-										<use xlink:href="sprite.svg#logo"></use>
+										<use xlink:href="images/sprite.svg#logo"></use>
 									</svg>
 								</a>
 								<a href="javascript:void(0);" class="phone header__phone"></a>
@@ -55,17 +55,17 @@
 								<div class="slider__item-images">
 									<div class="slider__item-images_desc">
 										<svg width="380" height="400">
-											<use xlink:href="sprite.svg#slider"></use>
+											<use xlink:href="images/sprite.svg#slider"></use>
 										</svg>
 									</div>
 									<div class="slider__item-images_laptop">
 										<svg width="248" height="302">
-											<use xlink:href="sprite.svg#slider-laptop-1"></use>
+											<use xlink:href="images/sprite.svg#slider-laptop-1"></use>
 										</svg>
 									</div>
 									<div class="slider__item-images_mob">
 										<svg width="268" height="216">
-											<use xlink:href="sprite.svg#slider-mob-1"></use>
+											<use xlink:href="images/sprite.svg#slider-mob-1"></use>
 										</svg>
 									</div>
 								</div>
@@ -83,17 +83,17 @@
 								<div class="slider__item-images">
 									<div class="slider__item-images_desc">
 										<svg width="380" height="400">
-											<use xlink:href="sprite.svg#slider"></use>
+											<use xlink:href="images/sprite.svg#slider"></use>
 										</svg>
 									</div>
 									<div class="slider__item-images_laptop">
 										<svg width="248" height="302">
-											<use xlink:href="sprite.svg#slider-laptop-1"></use>
+											<use xlink:href="images/sprite.svg#slider-laptop-1"></use>
 										</svg>
 									</div>
 									<div class="slider__item-images_mob">
 										<svg width="268" height="216">
-											<use xlink:href="sprite.svg#slider-mob-1"></use>
+											<use xlink:href="images/sprite.svg#slider-mob-1"></use>
 										</svg>
 									</div>
 								</div>
@@ -111,7 +111,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="sprite.svg#anvantages-1"></use>
+									<use xlink:href="images/sprite.svg#anvantages-1"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -122,7 +122,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="sprite.svg#anvantages-2"></use>
+									<use xlink:href="images/sprite.svg#anvantages-2"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -133,7 +133,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="sprite.svg#anvantages-3"></use>
+									<use xlink:href="images/sprite.svg#anvantages-3"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -144,7 +144,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="sprite.svg#anvantages-4"></use>
+									<use xlink:href="images/sprite.svg#anvantages-4"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -155,7 +155,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="sprite.svg#anvantages-5"></use>
+									<use xlink:href="images/sprite.svg#anvantages-5"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -166,7 +166,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="sprite.svg#anvantages-6"></use>
+									<use xlink:href="images/sprite.svg#anvantages-6"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -206,10 +206,10 @@
 						<div class="products__item">
 							<div class="products__item-image">
 								<svg class="d-desc" width="248" height="302">
-									<use xlink:href="sprite.svg#product-1"></use>
+									<use xlink:href="images/sprite.svg#product-1"></use>
 								</svg>
 								<svg class="d-mob" width="303" height="160">
-									<use xlink:href="sprite.svg#product-mob-1"></use>
+									<use xlink:href="images/sprite.svg#product-mob-1"></use>
 								</svg>
 							</div>
 							<div class="products__item-content">
@@ -225,10 +225,10 @@
 						<div class="products__item">
 							<div class="products__item-image">
 								<svg class="d-desc" width="248" height="302">
-									<use xlink:href="sprite.svg#product-2"></use>
+									<use xlink:href="images/sprite.svg#product-2"></use>
 								</svg>
 								<svg class="d-mob" width="303" height="160">
-									<use xlink:href="sprite.svg#product-mob-2"></use>
+									<use xlink:href="images/sprite.svg#product-mob-2"></use>
 								</svg>
 							</div>
 							<div class="products__item-content">
@@ -244,10 +244,10 @@
 						<div class="products__item">
 							<div class="products__item-image">
 								<svg class="d-desc" width="248" height="302">
-									<use xlink:href="sprite.svg#product-3"></use>
+									<use xlink:href="images/sprite.svg#product-3"></use>
 								</svg>
 								<svg class="d-mob" width="303" height="160">
-									<use xlink:href="sprite.svg#product-mob-3"></use>
+									<use xlink:href="images/sprite.svg#product-mob-3"></use>
 								</svg>
 							</div>
 							<div class="products__item-content">
@@ -263,10 +263,10 @@
 						<div class="products__item">
 							<div class="products__item-image">
 								<svg class="d-desc" width="248" height="302">
-									<use xlink:href="sprite.svg#product-4"></use>
+									<use xlink:href="images/sprite.svg#product-4"></use>
 								</svg>
 								<svg class="d-mob" width="303" height="160">
-									<use xlink:href="sprite.svg#product-mob-4"></use>
+									<use xlink:href="images/sprite.svg#product-mob-4"></use>
 								</svg>
 							</div>
 							<div class="products__item-content">
@@ -282,10 +282,10 @@
 						<div class="products__item">
 							<div class="products__item-image">
 								<svg class="d-desc" width="248" height="302">
-									<use xlink:href="sprite.svg#product-5"></use>
+									<use xlink:href="images/sprite.svg#product-5"></use>
 								</svg>
 								<svg class="d-mob" width="303" height="160">
-									<use xlink:href="sprite.svg#product-mob-5"></use>
+									<use xlink:href="images/sprite.svg#product-mob-5"></use>
 								</svg>
 							</div>
 							<div class="products__item-content">
@@ -301,10 +301,10 @@
 						<div class="products__item">
 							<div class="products__item-image">
 								<svg class="d-desc" width="248" height="302">
-									<use xlink:href="sprite.svg#product-6"></use>
+									<use xlink:href="images/sprite.svg#product-6"></use>
 								</svg>
 								<svg class="d-mob" width="303" height="160">
-									<use xlink:href="sprite.svg#product-mob-6"></use>
+									<use xlink:href="images/sprite.svg#product-mob-6"></use>
 								</svg>
 							</div>
 							<div class="products__item-content">
@@ -320,10 +320,10 @@
 						<div class="products__item">
 							<div class="products__item-image">
 								<svg class="d-desc" width="248" height="302">
-									<use xlink:href="sprite.svg#product-7"></use>
+									<use xlink:href="images/sprite.svg#product-7"></use>
 								</svg>
 								<svg class="d-mob" width="303" height="160">
-									<use xlink:href="sprite.svg#product-mob-7"></use>
+									<use xlink:href="images/sprite.svg#product-mob-7"></use>
 								</svg>
 							</div>
 							<div class="products__item-content">
@@ -376,7 +376,7 @@
 					<div class="union__banner">
 						<div class="h4 union__banner-title">Объединение Ростелеком, ГС-Инвест и Yadro</div>
 						<svg class="union__banner-icon" width="609" height="387">
-							<use xlink:href="sprite.svg#union"></use>
+							<use xlink:href="images/sprite.svg#union"></use>
 						</svg>
 						<div class="union__banner-text">Компания образована в результате создания СП «Облачная платформа» лидирующими компаниями ИТ-рынка — «Ростелеком», YADRO и GS Invest/Rubytech. Результатом объединения стала уникальная интеграция экспертиз известных разработчиков и появление единого продуктового портфеля от «ТИОНИКС», Digital Energy и «Скала Софтвер».</div>
 					</div>
@@ -440,7 +440,7 @@
 					</div>
 					<div class="banner__image">
 						<svg width="377" height="234">
-							<use xlink:href="sprite.svg#banner"></use>
+							<use xlink:href="images/sprite.svg#banner"></use>
 						</svg>
 					</div>
 				</section>
@@ -448,7 +448,7 @@
 					<div class="footer__top">
 						<a href="javascript:void(0);" class="logo footer__logo">
 							<svg width="79" height="25">
-								<use xlink:href="sprite.svg#second-logo"></use>
+								<use xlink:href="images/sprite.svg#second-logo"></use>
 							</svg>
 						</a>
 						<div class="second-menu footer__second-menu">
@@ -544,9 +544,6 @@
 				</div>
 			</form>
 		</div>
-		<object type="image/svg+xml" data="sprite.svg" >
-			Your browser does not support SVG
-		  </object>      
 		<script src="libs/swiper/swiper-bundle.min.js"></script>
 		<script src="libs/custom-select/custom-select.min.js"></script>
 		<script src="libs/imask/imask.js"></script>
