--- a/msi-new/index.html
+++ b/msi-new/index.html
@@ -12,8 +12,8 @@
         <section class="banner">
             <img src="images/logo.svg" class="logo">
             <picture>
-                <source srcset="images/banner-mob.webp" media="(max-width: 767px)">
-                <img src="images/banner.webp" alt="">
+                <source srcset="images/banner-mob-new.webp" media="(max-width: 767px)">
+                <img src="images/banner-new.webp" alt="">
             </picture>
         </section>
 
@@ -86,9 +86,9 @@
                 <div class="step-four" data-step="action">
                     <div class="filter__row-three">
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Экшн_Infinite-S3.jpg" data-imagemob="images/rooms/mob/desctop/Экшн_MAG_Infinite_S3_WT_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/mag infinite s3.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MAG Infinite s3</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -116,9 +116,9 @@
                             </div>
                         </div>
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Экшн_Trident3.jpg" data-imagemob="images/rooms/mob/desctop/Экшн_Trident-3_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/mpg trident 3.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MPG Trident 3</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -146,9 +146,9 @@
                             </div>
                         </div>
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Экшн_Trident-X.jpg" data-imagemob="images/rooms/mob/desctop/Экшн_TridentX_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/meg trident x.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MEG Trident X</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -181,9 +181,9 @@
                 <div class="step-four" data-step="strategy">
                     <div class="filter__row-three">
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Стратегии_Infinite-S3.jpg" data-imagemob="images/rooms/mob/desctop/Стратегии_MAG_Infinite_S3_WT_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/mag infinite s3.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MAG Infinite s3</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -211,9 +211,9 @@
                             </div>
                         </div>
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Стратегии_Infinite-X.jpg" data-imagemob="images/rooms/mob/desctop/Стратегии_Infinite-X_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/meg trident x.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MEG INFINITE X</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -246,9 +246,9 @@
                 <div class="step-four" data-step="mmo">
                     <div class="filter__row-three">
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/MMO_Infinite-S3.jpg" data-imagemob="images/rooms/mob/desctop/World-of-warcraft_MAG_Infinite_S3_WT_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/mag infinite s3.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MAG Infinite s3</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -276,9 +276,9 @@
                             </div>
                         </div>
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/MMO_Codex-5.jpg" data-imagemob="images/rooms/mob/desctop/World-of-warcraft_MAG_Codex_5_11th_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/ag codex 5.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MAG Codex 5</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -306,9 +306,9 @@
                             </div>
                         </div>
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/MMO_Trident-X.jpg" data-imagemob="images/rooms/mob/desctop/World-of-warcraft_TridentX_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/meg trident x.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MEG Trident X</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -341,9 +341,9 @@
                 <div class="step-four" data-step="simulator">
                     <div class="filter__row-three">
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Симуляторы_Trident-3.jpg" data-imagemob="images/rooms/mob/desctop/Симуляторы_Trident-3_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/mpg trident 3.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MPG Trident 3</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -371,9 +371,9 @@
                             </div>
                         </div>
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Симуляторы_Trident-A.jpg" data-imagemob="images/rooms/mob/desctop/Симуляторы_Trident-A_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/mpg trident a.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MPG Trident A</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -401,9 +401,9 @@
                             </div>
                         </div>
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Симуляторы_Trident-X.jpg" data-imagemob="images/rooms/mob/desctop/Симуляторы_TridentX_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/meg trident x.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MEG Trident X</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -436,9 +436,9 @@
                 <div class="step-four" data-step="music">
                     <div class="filter__row-three">
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Муз_Creator P50.jpg" data-imagemob="images/rooms/mob/desctop/Музыка_Creator-P50_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/p50.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">Creator P50</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -471,9 +471,9 @@
                 <div class="step-four" data-step="photo">
                     <div class="filter__row-three">
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/ВидеоPrestige-P100.jpg" data-imagemob="images/rooms/mob/desctop/Видеомонтаж_Creator_P100A_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/p100x.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">P100X</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -506,9 +506,9 @@
                 <div class="step-four" data-step="modeling">
                     <div class="filter__row-three">
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Дизайнер_Prestige P100.jpg" data-imagemob="images/rooms/mob/desctop/Дизайн_MS321_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/p100a.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">P100A</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -541,9 +541,9 @@
                 <div class="step-four" data-step="streaming">
                     <div class="filter__row-three">
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Стриминк_Trident-X.jpg" data-imagemob="images/rooms/mob/desctop/Стриминг_TridentX_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/meg trident x.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MEG Trident X</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
@@ -571,9 +571,9 @@
                             </div>
                         </div>
                         <div class="filter__tech-item" data-image="images/rooms/desc/desctop/Стриминк_Aegis-Ti5.jpg" data-imagemob="images/rooms/mob/desctop/Стриминг_Aegis-Ti5_mob.jpg">
-                            <!-- <div class="filter__tech-item-image">
-                                <img src="images/dest/monitor-2.webp" alt="">
-                            </div> -->
+                            <div class="filter__tech-item-image">
+                                <img src="images/desctops/meg aegis ti5.png" alt="">
+                            </div>
                             <div class="filter__tech-item-title">MEG AEGIS Ti5</div>
                             <div class="filter__tech-item-text">
                                 <div class="filter__tech-charachteristics">
