--- a/basistech/index.html
+++ b/basistech/index.html
@@ -373,21 +373,15 @@
 					</div>
 				</section>
 				<section class="union">
-					<div class="union__banner">
-						<div class="h4 union__banner-title">Объединение Ростелеком, ГС-Инвест и Yadro</div>
+					<div class="union__content">
+						<div class="h4 union__title">Объединение Ростелеком, <nobr>ГС-Инвест</nobr> и Yadro</div>
+						<div class="union__text">Компания образована в результате создания СП «Облачная платформа» лидирующими компаниями ИТ-рынка — «Ростелеком», YADRO  и GS Invest/Rubytech. Результатом объединения стала уникальная интеграция экспертиз известных разработчиков и появление единого продуктового портфеля от «ТИОНИКС», Digital Energy и «Скала Софтвер»</div>
+					</div>
+					<div class="union__image">
 						<svg class="union__banner-icon" width="609" height="387">
 							<use xlink:href="images/sprite.svg#union"></use>
 						</svg>
-						<div class="union__banner-text">Компания образована в результате создания СП «Облачная платформа» лидирующими компаниями ИТ-рынка — «Ростелеком», YADRO и GS Invest/Rubytech. Результатом объединения стала уникальная интеграция экспертиз известных разработчиков и появление единого продуктового портфеля от «ТИОНИКС», Digital Energy и «Скала Софтвер».</div>
-					</div>
-					<div class="union__companies">
-						<div class="h4 union__companies-title">Входим в группу компаний</div>
-						<img src="images/group-1.webp" alt="" class="union__companies-image" width="200" height="120">
-						<img src="images/group-2.webp" alt="" class="union__companies-image" width="200" height="120">
-						<img src="images/group-3.webp" alt="" class="union__companies-image" width="200" height="120">
-						<img src="images/group-4.webp" alt="" class="union__companies-image" width="200" height="120">
-						<img src="images/group-5.webp" alt="" class="union__companies-image" width="200" height="120">
-					</div>
+					</div>			
 				</section>
 				<section class="partners">
 					<div class="title partners__title">
