--- a/basistech/index.html
+++ b/basistech/index.html
@@ -454,6 +454,8 @@
 								<a href="javascript:void(0);" class="second-menu__item">Базис.Virtual Security</a>
 								<a href="javascript:void(0);" class="second-menu__item">Базис.WorkPlace Security</a>
 								<a href="javascript:void(0);" class="second-menu__item">Базис.Cloud</a>
+								<a href="javascript:void(0);" class="second-menu__item">Базис.vCore</a>
+								<a href="javascript:void(0);" class="second-menu__item">Базис.Storage Scurity</a>
 							</div>
 						</div>
 						<div class="second-menu footer__second-menu">
